# tom

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  conftest.py  prisma  pyproject.toml  pytest.ini  setup-dev.sh  setup.py
auxiliary/deploy/: dev-backend.conf  prod-backend.conf  update-env.py  update_env.py
auxiliary/deploy/base/: deploy-base.sh  inventory.tpl  main.tf  outputs.tf  prod-backend.conf  variables.tf
auxiliary/deploy/services/: main.tf  variables.tf  versions.tf
configs/common/: ca-csr.json  ca-key.pem  ca.csr  ca.pem
configs/trip-manager/: test-config.cfg  trip-manager-csr.json  trip-manager-key.pem  trip-manager.csr  trip-manager.pem
flask_app/: auth.py  blog.py  db.py
flask_app/templates/: base.html
flask_app/templates/auth/: login.html  register.html
grpc_protos/: Makefile
grpc_protos/tom/common/: common.proto  tom.proto
mps_files/: test_trip.mps
optimization-engine/: CMakeLists.txt  Makefile  pyproject.toml  setup.py
optimization-engine/include/optimization-engine/: optimize.hpp  solution.hpp  utils.hpp
optimization-engine/src/optimization-engine/: optimize.cpp  run.py  solution.cpp  utils.cpp
optimization-engine/tests/: CMakeLists.txt  test_optimize.cpp  test_utils.cpp
optimization_engine/: CMakeLists.txt  Makefile  conftest.py  setup.py  trips
optimization_engine/cmake/: pybind11.cmake
optimization_engine/include/optimization_engine/: optimize.hpp
optimization_engine/lambda/: Dockerfile  build-image.sh  lambda_function.py  publish-lambda.sh  push-image.sh
optimization_engine/src/optimization_engine/: __init__.py  itinerary.py  optimize.cpp  optimize_bind.cpp
optimization_engine/tests/: CMakeLists.txt  sample_MPSolutionResponse.json  sample_s3_put.json  small_trip_circular.mps  small_trip_linear.mps  small_trip_linear_metadata.json  small_trip_sequential_metadata.json  test-lambda-image.sh  test_bindings.py  test_itinerary.py  test_meta.json  test_optimize.cpp
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py  test_gmaps_api.py  test_trip.py
tom/: main.py  setup.py
tom-common/: Makefile  conftest.py  pyproject.toml
tom-common/tests/: test_configuration.py  test_gmaps_api.py  test_prisma.py
tom-common/tom/common/: __init__.py  aws_resource_access.py  common_pb2.py  common_pb2_grpc.py  db.py  googlemaps_access.py  grpc_utils.py  location.py  registry.py  tom_pb2.py  tom_pb2_grpc.py  traveler.py  variable.py
tom-common/tom/common/accessor/: aws_access.py
tom-common/tom/common/cloud_access/: gmaps.py
tom-common/tom/common/cloud_access/aws/: s3.py  sns.py
tom-common/tom/common/configuration/: loader.py
tom-model-setup/: Makefile  pyproject.toml
tom-optimization/: CMakeLists.txt  Makefile  conftest.py  pyproject.toml
tom-optimization/include/tom-optimization/: optimize.hpp  utils.hpp
tom-optimization/src/tom-optimization/: optimize.cpp  utils.cpp
tom-optimization/tests/: CMakeLists.txt  sample_large_MPSolutionResponse.json  test_optimization.py  test_optimize.cpp  test_utils.cpp
tom-optimization/tom/optimization/: common_utils.py  optimize.py
tom-traveler-access/: Makefile  pyproject.toml
tom-trip-access/: Makefile  pyproject.toml
tom-trip-manager/: Makefile  conftest.py  pyproject.toml  response.json
tom-trip-manager/lambda/: Dockerfile  build-image.sh  lambda_function.py  publish-lambda.sh  push-image.sh
tom-trip-manager/tests/: sample_trip.json  sample_trip.yaml  sample_trip2.json  sample_trip2.yaml  subtour_trip.json  test-lambda-image.sh  test_gmaps_api.py  test_trip.py  test_trip_manager.py
tom-trip-manager/tom/trip_manager/: __init__.py  servicer.py  solver.py  trip_manager.py  writer.py
tom-trip-manager/tom/trip_manager/data_objects/: __init__.py  solver.py  trip.py
tom-trip-manager/tom/trip_manager/model_utils/: common_utils.py
tom-ui/: .eslintrc.json  .gitignore  README.md  example.env  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
tom-ui/.storybook/: main.ts  preview.ts
tom-ui/app/: error.tsx  globals.css  layout.tsx  loading.tsx
tom-ui/app/(authenticated)/: layout.tsx
tom-ui/app/(authenticated)/created/: page.tsx
tom-ui/app/(unauthenticated)/: layout.tsx
tom-ui/app/api/userPreferences/: route.ts
tom-ui/app/signin/: page.tsx
tom-ui/components/: Dropdown.tsx  ReduxProvider.tsx
tom-ui/components/page-components/: Footer.tsx  Header.tsx  ListView.tsx  LocationBox.tsx  MainNavigationSteps.tsx  MapView.tsx  Mobile.tsx  Steps.tsx
tom-ui/components/ui-components/: Btn.tsx  Dropdown.tsx  FormField.tsx  GooglePlacesSearchField.tsx  Link.tsx  ListViewLocation.tsx  LocationBox.tsx  LocationListViewBox.tsx  LocationNoteBox.tsx  MapViewLocationPreferenceBox.tsx  Marker.tsx  OTPInput.tsx  RouteCreatedBox.tsx  SelectedMarker.tsx  Spinner.tsx  Toast.tsx
tom-ui/hooks/: redux.ts  usePlacesAutocomplete.ts  usePlacesAutocompleteTypes.d.ts  useScreenSize.ts
tom-ui/prisma/: schema.prisma  seed.js
tom-ui/redux/: store.ts
tom-ui/redux/slices/: toastSlice.ts  tripSlice.ts  userSlice.ts
tom-ui/stories/: Btn.stories.ts  Btn.tsx
tom-ui/typings/: Location.ts  Traveler.ts  index.ts
tom-ui/utils/: aws-sdk.ts  constants.ts  dummy-data.ts  google-maps.ts  time.ts
tom/data_objects/: solver.py  traveler.py  trip.py
tom/decorators/: sqlite_db_connection.py
tom/flaskr/: __init__.py  auth.py  blog.py
tom/model_utils/: common_utils.py
tom/objs/: location.py  location_trip_params.py  traveler.py  traveler_trip_params.py  trip.py
tom/optimize/: creative.py  functions.py
tom/tests/: conftest.py  data.sql  sample_trip.yaml  test_auth.py  test_blog.py  test_factory.py  test_gmaps_api.py  test_location.py  test_traveler.py  test_trip.py
tom/tom/data_objects/: location.py
travel_optimization_model/objs/: location.py  mip.py  traveler.py  trip.py
trips/: itineraries.json  large_trip.json  resonse_example.yaml  sample_s3_put.json  sample_trip2.json  small_trip.json  small_trip_circular.mps  small_trip_circular_metadata.json  small_trip_linear_metadata.json  subtour_trip.json
(+33 files in other folders)
