[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tom"
version = "0.0.1"
dependencies = [
    "flask",
    "ortools",
    "googlemaps",
    "python-dotenv",
    "pyyaml",
    "wheel"
]

[tool.setuptools.packages]
find = {}

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]