[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tom"]
namespaces = true

[project]
name = "tom-model-setup"
version = "0.0.1"
description = "Goal programming model setup service for TOM."
dependencies = ["tom-common"]
