[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tom.*"]
namespaces = true

[project]
name = "tom-traveler-access"
version = "0.0.1"
description = "TravelerAccessResource utility for TOM"
dependencies = ["tom-common"]
